# Janus

./: .gitignore  DEPLOY.md  HACKATHON  PRD.md  READ.md  README.md  package-lock.json  package.json  todo
.obsidian/: workspace.json
backend/: .env.example  .env.test  README.md  docker-compose.yml  recipients.example.json  requirements.txt
backend/agents/: ai_service.py  ika_service.py  models.py  urls.py  views.py
backend/api/: serializers.py  urls.py  views.py
backend/app/: auth.py  config.py  decision_engine.py  deps.py  domain.py  ledger.py  main.py  models.py  policy.py  recipients.py  redis_client.py  schemas.py
backend/backend/: settings.py  urls.py
backend/scripts/: finalize_transfer.py  load_test.py
backend/tests/: conftest.py  (+6 more)
bridge/: drift_bridge.js  ika_bridge.js  ika_bridge.ts  package-lock.json  package.json  probe_Source.js  probe_direct.js  probe_dkg.js  probe_enkey.js  probe_final.js  probe_network.js
contracts/: Move.toml
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
janus_core/: Move.toml  Published.toml
janus_policy/: Anchor.toml  test_aum.js  test_runner.js  test_simple.js
janus_policy/programs/janus_policy/: Cargo.toml
janus_policy/programs/janus_policy/src/: constants.rs  error.rs  instructions.rs
mcp_server/: README.md  requirements.txt  server.py
notes/: AUDIT.md
sdks/python/: README.md  pyproject.toml
sdks/python/janus_sdk/: __init__.py  client.py  exceptions.py  models.py
sdks/python/tests/: test_client.py
test-ledger/: faucet-keypair.json  stake-account-keypair.json
(+86 files in other folders)
