[package]
name = "janus_policy"
version = "0.1.0"
description = "Janus treasury policy — Solana Anchor migration of janus_core::policy (SUI Move)"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "janus_policy"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.31.1"